src/main/resources/view/Extensions.css
.error {
    -fx-text-fill: #d06651 !important; /* The error class should always override the default text-fill style */
}

.list-cell:empty {
    /* Empty cells will not have alternating colours */
    -fx-background: #383838;
}

.tag-selector {
    -fx-border-width: 1;
    -fx-border-color: white;
    -fx-border-radius: 3;
    -fx-background-radius: 3;
}

.tooltip-text {
    -fx-text-fill: white;
}

#contact, #event {
    -fx-text-fill: white;
    -fx-padding: 10 5 10 5;
    -fx-background-insets: 10;
}

#contact{
    -fx-graphic:url(../images/name.png);
}

#email{
    -fx-graphic:url(../images/email.png);
}

#phone{
    -fx-graphic:url(../images/phone.png);
}

#address{
    -fx-graphic:url(../images/address.png);
}
#telegramHandle{
    -fx-graphic:url(../images/telegram.png);
}
#zoom{
    -fx-graphic:url(../images/zoom.png);
}

#linkToEvent{
    -fx-graphic:url(../images/event.png);
}

#tagIcon{
    -fx-graphic:url(../images/tag.png);
}

#event{
    -fx-graphic:url(../images/eventBig.png);
}

#from, #to{
    -fx-graphic:url(../images/datetime.png);
}

#description{
    -fx-graphic:url(../images/description.png);
}

#linkToContact{
    -fx-graphic:url(../images/group.png);
}

